# dns2socks

./: .gitignore  Cargo.toml  README.md  build-aarch64-apple-ios-debug.sh  build-aarch64-apple-ios.sh  build-apple-debug.sh  build-apple.sh  cbindgen.toml
.cargo/: config.toml
.github/workflows/: publish-exe.yml  rust.yml
scripts/: test_dns_query.py
src/: android.rs  api.rs  config.rs  dns.rs  dump_logger.rs  lib.rs
