[package]
name = "dns2socks"
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/ssrlive/dns2socks"
authors = ["ssrlive"]
description = "Convert DNS requests to SOCKS5 proxy."
readme = "README.md"

[lib]
name = "dns2socks_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive", "wrap_help"] }
ctrlc2 = { version = "3", features = ["async", "termination"] }
dotenvy = "0.15"
env_logger = "0.11"
hickory-proto = "0.25"
log = "0.4"
moka = { version = "0.12", default-features = false, features = ["future"] }
percent-encoding = "2"
rand = "0.9"
socks5-impl = { version = "0.7", default-features = false, features = [
    "client",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
url = "2"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.15"
jni = { version = "0.21", default-features = false }
