[package]
name = "dns2socks"
version = "0.2.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/ssrlive/dns2socks"
authors = ["ssrlive"]
description = "Convert DNS requests to SOCKS5 proxy."
readme = "README.md"

[lib]
name = "dns2socks_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
ctrlc2 = { version = "4.0.0", features = ["async", "termination"] }
dotenvy = "0.15.7"
env_logger = "0.11.10"
hickory-proto = "0.26.1"
log = "0.4.33"
moka = { version = "0.12.15", default-features = false, features = ["future"] }
percent-encoding = "2.3.2"
rand = "0.10.1"
socks5-impl = { version = "0.9.0", default-features = false, features = [
    "client",
] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = "0.7.18"
url = "2.5.8"

[target.'cfg(target_os="android")'.dependencies]
android_logger = "0.15.1"
jni = { version = "0.22.4", default-features = false }
